2009-05-04 Iuri Fernandes <iurifq@gmail.com>
* Created  scaffolding for apartamento.
* Added forgotten files from reserva.

2009-05-04 Iuri Fernandes <iurifq@gmail.com>
* Created  scaffolding for reservas. It's necessary to alter tipoAp and hosp in new reserva form.

2009-05-04 Iuri Fernandes <iurifq@gmail.com>
* Created  table reservas, but the foreign key for hospedes is not working.

2009-05-04 Iuri Fernandes <iurifq@gmail.com>
* Created Tipo_Apartamentos scaffolding.

2009-05-04 Iuri Fernandes <iurifq@gmail.com>
* Created foreign key for apartamento.

2009-05-02 Iuri Fernandes <iurifq@gmail.com>
* Modified createTables script to create TiposApartamentos. It's not working
yet.

2009-05-03 Suzana Matos <suzana.mato@gmail.com>
* app/views/admin : 
	- index : fixed wrong words
	- login : fixed the colspan just to be cute(?)
* public/stylesheets/scaffold : 
	- hide empty-cells in table

2009-05-03 Suzana Matos <suzana.mato@gmail.com>
* views/layouts/layout : fixed session => show the right menu now

2009-05-03 Suzana Matos <suzana.mato@gmail.com>
* controllers :
	- hospedes : added layout
	- servicos : added layout
	- admin : added layout and the method index
	- application : changed the file name (because of the new version of
	rails)
* views/shared : included menus for layout
* views/layouts : 
	- servicos : returned to the old version
	- layout : the main layout for (almost) every class
* view/admin : 
	- index : added 
	- login : fixed identation

2009-05-03 Suzana Matos <suzana.mato@gmail.com>
* Modified public/stylesheets/scaffold.css
	-Created CSS for 
		. body
		. tables
		. layout
* Modified app/view/layouts/servicos.html.erb
	- Created a test layout

2009-05-02 Iuri Fernandes <iurifq@gmail.com>
* Modified redirect to remember which page user was trying to acces.
* Hospedes and Servicos now can only be seen and edited by Recepcionistas.

2009-05-02 Iuri Fernandes <iurifq@gmail.com>
* Added images, javascripts and css directories.
